--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -20,19 +20,20 @@
             android:singleLine="true"
             android:textStyle="bold"
             android:textColor="@color/RowColor"
-            tools:text="Description" />
+            tools:text="WeaponName" />
 
 
 
-    <TextView
-        android:id="@+id/cell_txt_weapons_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="25dp"
-        android:textSize="12dp"
-        android:textColor="@color/RowColor"
-        android:text="TextView" />
+        <TextView
+            android:id="@+id/cell_txt_weapons_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="25dp"
+            android:textSize="12dp"
+            android:textColor="@color/RowColor"
+            android:text="WeaponID" />
+
 
     </RelativeLayout>
 
