Changing Icon and Name App and adding line on bottom border

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="RowColor">#FFFFFF</color>
     <color name="ColorBlack">#000000</color>
+    <color name="grey">#CCCCCC</color>
 </resources>
