--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -20,7 +20,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginStart="1dp"
             android:layout_marginLeft="1dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="8dp"
             android:layout_toEndOf="@+id/cell_txt_weapons_image"
             android:layout_toRightOf="@+id/cell_txt_weapons_image"
             android:gravity="center"
@@ -50,6 +50,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
+
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="1px"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginBottom="0.1px"
+            android:background="@color/grey" />
 
     </RelativeLayout>
 
