--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:theme="@style/Base.Theme.MaterialComponents.Light.DarkActionBar"
     android:layout_height="match_parent"
-    android:background="@drawable/dofus">
+    android:background="@drawable/dofus"
+    tools:context=".MainActivity">
+
+    <include
+        layout="@layout/toolbar_layout"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/myRecyclerView"
@@ -16,8 +23,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
         android:indeterminate="true"
         android:indeterminateDrawable="@drawable/my_progress_indeterminate"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/myRecyclerView"
+        app:layout_constraintTop_toTopOf="@+id/myRecyclerView" />
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
