--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#393939</color>
+    <color name="colorPrimaryDark">#2f2f2f</color>
+    <color name="colorAccent">#52b7f8</color>
+    <color name="backgroundfragment">#2b2b2B</color>
     <color name="RowColor">#FFFFFF</color>
     <color name="ColorBlack">#000000</color>
     <color name="grey">#CCCCCC</color>
