--- a/app/src/main/res/layout/activity_main_fragment.xml
+++ b/app/src/main/res/layout/activity_main_fragment.xml
@@ -5,12 +5,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Vu.Fragments.MainActivityFragment"
+    tools:context=".Vu.Activities.MainActivityFragment"
     android:orientation="vertical">
 
     <com.google.android.material.tabs.TabLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#000000"
         app:tabMode="fixed"
         app:tabGravity="fill"
         app:tabIndicatorColor="@color/colorAccent"
