--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
+    android:fitsSystemWindows="true"
     android:theme="@style/Base.Theme.MaterialComponents.Light.DarkActionBar"
     app:popupTheme="@style/Base.Theme.MaterialComponents.Light"
     android:id="@+id/toolBar">
