--- a/app/src/main/res/layout/equipments_fragment.xml
+++ b/app/src/main/res/layout/equipments_fragment.xml
@@ -7,7 +7,7 @@
     android:theme="@style/Base.Theme.MaterialComponents.Light.DarkActionBar"
     android:layout_height="match_parent"
     android:background="@drawable/dofus"
-    tools:context=".Vu.Activities.MainActivityFragment">
+    tools:context=".Vu.Activities.EncyclopedieActivityFragment">
 
     <include
         layout="@layout/toolbar_layout"/>
