--- a/app/src/main/res/layout/video_tuto_xp.xml
+++ b/app/src/main/res/layout/video_tuto_xp.xml
@@ -4,14 +4,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="180dp">
+    android:layout_height="250dp">
 
-        <WebView
-            android:id="@+id/videoWebView"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="0dp"></WebView>
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:textColor="@color/colorAccent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <WebView
+        android:id="@+id/videoWebView"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:layout_editor_absoluteX="0dp"></WebView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
