--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -2,6 +2,16 @@
 <menu xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item tools:ignore="MenuTitle">
+    <menu>
+        <group android:checkableBehavior="single">
+            <item
+                android:id="@+id/nav_accueil_classe"
+                android:title="Menu Principal" />
+        </group>
+    </menu>
+    </item>
+
 
     <item android:title="Univers">
             <menu>
