--- a/app/src/main/res/layout/row_layout_classes.xml
+++ b/app/src/main/res/layout/row_layout_classes.xml
@@ -1,53 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:padding="6dip"
-    android:theme="@style/Base.Theme.MaterialComponents.Light.DarkActionBar"
-    android:id="@+id/parent">
+    android:orientation="vertical">
 
-
-    <RelativeLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="65dp"
-        tools:ignore="MissingConstraints">
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/cardview_default_elevation">
 
-
-        <TextView
-            android:id="@+id/cell_txt_classes_name"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="156dp"
-            android:layout_marginLeft="156dp"
-            android:layout_marginTop="23dp"
-            android:layout_marginEnd="156dp"
-            android:layout_marginRight="156dp"
-            android:layout_marginBottom="23dp"
-            android:gravity="center"
-            android:singleLine="true"
-            android:textColor="@color/RowColor"
-            android:textStyle="bold"
-            tools:text="ClassesName" />
+            android:orientation="vertical"
+            android:background="@drawable/cardfd"
+            android:padding="@dimen/cardview_compat_inset_shadow"
+            >
 
-        <View
-            android:layout_width="wrap_content"
-            android:layout_height="1px"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="0dp"
-            android:layout_marginLeft="0dp"
-            android:layout_marginBottom="0.1px"
-            android:background="@color/grey" />
+            <TextView
+                android:id="@+id/cell_txt_classes_name"
+                android:layout_width="match_parent"
+                android:layout_height="65dp"
+                android:text="name"
+                android:textAlignment="center"
+                android:textColor="#FFFFFF"
+                android:textSize="30dp"
+                android:textStyle="bold" />
 
-    </RelativeLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <ImageView
+                android:id="@+id/imageView_Image"
+                android:layout_width="408dp"
+                android:layout_height="148dp" />
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+</LinearLayout>
